--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 $Log$
+Revision 1.75  2006/05/14 10:46:23  andy
+Check if we have files to process is added.
+Synchronize TODO with last changes.
+New option --aggr and --no-aggr for switch aggregation process.
+No put single letter for %E, %F, %I or %W when tags is absent.
+
 Revision 1.74  2006/05/13 15:18:08  andy
 Correct definition of aggregation related variables.
 Merge files from ARGV and --file option.
@@ -293,3 +299,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
