--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.82  2006/05/18 16:18:01  andy
+Optimize aggregationProcess().
+Remove deprecated --rotate and --ext options.
+
 Revision 1.81  2006/05/17 17:05:09  andy
 Implement exclude list (option --exclude <FILE>).
 Release as 0.19.1.
@@ -323,4 +327,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
