--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.85  2006/05/18 18:57:38  andy
+NEWS - user friendly change log is added.
+
 Revision 1.84  2006/05/18 18:36:27  andy
 Recognize --extension '.ext' as well.
 Simplify counter size calculation.
@@ -337,3 +340,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
