--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,12 @@
 * 0.19.2 *
 
-From this release the --rotate and --ext option aliases are removed and
--aggr-dir is moved to deprecated (use --aggr-directory instead). Small
-optimization in aggregation process function is implemented. Simplified
-counter size calculation is added. Hardcoded 'jpg' extension changed to low
-cased value of --extension command line option. Since this version the '.ext'
-form of extension is recognized as well. Documentation is expanded with NEWS -
-user friendly change log.
+The --rotate and --ext option aliases have been removed, and -aggr-dir has
+been moved to deprecated (use --aggr-directory instead). A small optimization
+in the aggregation process function has been implemented. Simplified counter
+size calculation has been added. The hard-coded 'jpg' extension has been
+changed to a lowercased value of the --extension command line option. The
+'.ext' form of extension is recognized. The documentation has been expanded
+with NEWS (a user-friendly changelog).
 
 
 * 0.19.1 *
