--- a/README
+++ b/README
@@ -121,6 +121,11 @@ Notes:
  iii) You may choose any desired PREFIX by changing /usr/local at above
       sample.
 
+RenRot is shipped with the built-in spec file and rpm package. In RPM-based
+distribution you may install package by next way:
+    rpmbuild -tb renrot-<version>.tar.gz
+    rpm -ivh /usr/src/redhat/RPMS/noarch/renrot-<version>-<release>.noarch.rpm
+
 
 DEPENDENCIES
 
@@ -146,6 +151,8 @@ LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
 ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+For more information, please, consult with the full license text.
 
 
 THANKS
