--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.88  2006/05/21 11:17:21  andy
+Release as 0.19.3 (bugfix).
+
 Revision 1.87  2006/05/20 18:52:27  andy
 No empty --extension argument.
 Fix bug when rotating file name contains special symbols.
@@ -351,4 +354,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
