Write more explanation of Orientation tag rotation in README and manual. Add new restriction to related section of README. Also fix TODO according last changes. The --aggr-dir option alias is removed. Now 180 degree is approved to use at --rotate-angle or --rotate-thumb options.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@136 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 * 0.19.3 *
 
-The bug when rotating file name contains special symbols was fixed. Now the
-empty --extension argument is no available. A small optimization has been
-implemented. No attempt to process the absent files. The smart Orientation tag
-rotation is implemented for rotation process.
+The bug which occurred when rotating filenames containing special symbols has
+been fixed. The empty --extension argument is no longer available. A small
+optimization has been implemented. No attempt is made to process absent files.
+Smart Orientation tag rotation has been implemented for the rotation process.
 
 
 * 0.19.2 *
