--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 $Log$
+Revision 1.89  2006/05/21 19:01:46  andy
+Write more explanation of Orientation tag rotation in README and manual.
+Add new restriction to related section of README. Also fix TODO according last changes.
+The --aggr-dir option alias is removed.
+Now 180 degree is approved to use at --rotate-angle or --rotate-thumb options.
+
 Revision 1.88  2006/05/21 11:17:21  andy
 Release as 0.19.3 (bugfix).
 
@@ -354,3 +360,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
