--- a/TODO
+++ b/TODO
@@ -17,7 +17,7 @@ q  to write to some tag the options passed to renrot
 
 q  to implement %t in name template, where the array of desired tags will be inited
 
--  smart rotation of Orientation tag (where used --only-orientation)
++- smart rotation of Orientation tag (where used --only-orientation)
 
 
 Disk I/O
@@ -45,6 +45,8 @@ q  to write intellectual aggregation on clisp
    output to the set of OUT directories
 
 +  to implement --no-mtime, and put it to the config
+
+-  avoid hard link making where in and out files on different partitions
 
 
 File naming
