TODO cleanup. Start tag writer as separate task (new option --tag, but still unworked).
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@145 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.95  2006/05/26 20:22:38  andy
+TODO cleanup.
+Start tag writer as separate task (new option --tag, but still unworked).
+
 Revision 1.94  2006/05/25 07:02:51  andy
 Fix NEWS spelling according to FreshMeat announce.
 New configuration file style is described in README.
@@ -386,3 +390,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
