--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 * 0.20rc2 *
 
-A new style of configuration file has been described in README. This style is
-used by default. The some usefull comments has been added to the sample of
-configuration file. Also TODO has been cleaned. In addition, the check for
-configuration file presence has been restored.
+A new style of configuration file was described in README. This style is used
+by default. Some useful comments were added to the sample configuration file.
+The TODO file was cleaned up. The check for configuration file presence has
+been restored.
 
 
 * 0.20rc1 *
