Deprecate --aggr-dumb and related configuration variable, use --dry-run instead.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@150 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.99  2006/05/29 06:52:19  andy
+Deprecate --aggr-dumb and related configuration variable, use --dry-run instead.
+
 Revision 1.98  2006/05/28 21:37:34  andy
 Implement start and step counter values (options --counter-start and --counter-step).
 Use fixed field or not when counter is printed (--counter-fixed-field, is 'on' by default).
@@ -402,3 +405,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
