bugfix in aggregation mode delta section.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@152 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.100  2006/05/29 14:44:35  zeus
+bugfix in aggregation mode delta section.
+
 Revision 1.99  2006/05/29 06:52:19  andy
 Deprecate --aggr-dumb and related configuration variable, use --dry-run instead.
 
@@ -405,4 +408,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
